tests/fail/space_string.stderr
error: string literals can only contain [a-zA-Z0-9_]
 --> $DIR/space_string.rs:1:41
  |
1 | concat_idents::concat_idents!(fn_name = " ", name {
  |                                         ^^^
